--- a/005_AUX_NotebookToPracticeWorkflow.ipynb
+++ b/005_AUX_NotebookToPracticeWorkflow.ipynb
@@ -15,6 +15,40 @@
     "Favorite animal:\n",
     "Favorite non living thing:\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "89d383d7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dave Pandya\n",
+      "EID: dp33462\n",
+      "Favorite Animal: Dogs\n",
+      "Favorite non living thing: Cars\n",
+      "Dave: Pandya: dp33462: Dogs: Cars\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Dave Pandya\")\n",
+    "print(\"EID: dp33462\")\n",
+    "print(\"Favorite Animal: Dogs\")\n",
+    "print(\"Favorite non living thing: Cars\")\n",
+    "print(\"Dave: Pandya: dp33462: Dogs: Cars\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e266c293",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -33,7 +67,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
